# llm-lint

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  RELEASING.md  llm-lint.toml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
npm/: README.md  package.json
npm/scripts/: postinstall.js
npm/templates/: llm-lint.toml
scripts/: release.py
src/: config.rs  git_scope.rs  lib.rs  main.rs  models.rs  pragma.rs  scanner.rs  scoring.rs  walker.rs
src/parsers/: mod.rs  python.rs  text.rs
src/rules/: duplicate_functions.rs  exposed_secrets.rs  fallback_defaults.rs  helper_sprawl.rs  large_file.rs  large_function.rs  mod.rs
tests/: config_toml.rs  large_file.rs  rules.rs
