[package]
name = "llm-lint"
version = "0.1.0"
edition = "2021"
description = "LLM-oriented linter — catch quality drift before it hardens"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "llm-lint"
path = "src/main.rs"

[lib]
name = "llm_lint"
path = "src/lib.rs"
