[package]
name = "llm-lint"
version = "0.1.2"
edition = "2021"
description = "LLM-oriented linter — catch quality drift before it hardens"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1.12.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10.9"
textwrap = "0.16.2"
thiserror = "2"
tree-sitter = "0.26.7"
tree-sitter-python = "0.25.0"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "llm-lint"
path = "src/main.rs"

[lib]
name = "llm_lint"
path = "src/lib.rs"
