[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "llm-lint"
dynamic = ["version"]
description = "LLM-oriented CLI linter — catch quality drift before it hardens (Rust binary)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Joshua Gilley", email = "joshdgilley@gmail.com" }]
keywords = ["cli", "code-quality", "static-analysis", "linter", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/joshuagilley/llm-lint"
Repository = "https://github.com/joshuagilley/llm-lint"
"Bug Tracker" = "https://github.com/joshuagilley/llm-lint/issues"

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
strip = true
